--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="../src/assets/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/8fbbe67fb7.js" crossorigin="anonymous"></script>
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
